responsiveness fixes for homepage on mobile

--- a/components/Feed/Feed.module.scss
+++ b/components/Feed/Feed.module.scss
@@ -59,11 +59,13 @@
 
 @media screen and (max-width: 425px) {
   .feedContainer {
-    max-width: 250px;
+    max-width: 320px;
     align-items: center;
     border: none;
     box-shadow: none;
     padding: 0;
     margin: 0;
   }
+
+  
 }
