--- a/components/HomePage/HomePage.module.scss
+++ b/components/HomePage/HomePage.module.scss
@@ -51,3 +51,15 @@
         justify-content: center;
     }
 }
+
+@media screen and (min-width: 320px) {
+    .mainContent {
+        margin: 0;
+        padding: 0;
+    }
+    
+    .feed {
+        padding: 0;
+        margin: 0;
+    }
+}
